@@ -6,6 +6,8 @@ import javax.swing.*;
 import java.awt.event.*;
 import java.awt.*;
 
+import java.util.List;
+
 
 /*---------------------------------*/
 /*  Class PanelBtn                 */
@@ -16,15 +18,15 @@ public class PanelBtn extends JPanel implements ActionListener
 	/* Attributs                     */
 	/*-------------------------------*/
 	private FrameMPM frame;
-    private JButton  btnTot;
-    private JButton  btnTard;
-    private JButton btnCritique;
+	private JButton  btnTot;
+	private JButton  btnTard;
+	private JButton btnCritique;
 	private int      cptDate = 0;
 
 	/*-------------------------------*/
 	/* Constructeur                  */
 	/*-------------------------------*/
-    public PanelBtn( FrameMPM frameMpm ) 
+	public PanelBtn( FrameMPM frameMpm ) 
 	{
 		this.frame   = frameMpm;
 		this.cptDate = 1;
@@ -33,15 +35,15 @@ public class PanelBtn extends JPanel implements ActionListener
 		/*-------------------------------*/
 		/* Création des composants       */
 		/*-------------------------------*/
-        this.btnTot  = new JButton("+ tôt");
+		this.btnTot  = new JButton("+ tôt");
 
-        this.btnTard = new JButton("+ tard");
-        this.btnTard.setEnabled(false);
+		this.btnTard = new JButton("+ tard");
+		this.btnTard.setEnabled(false);
 
-        this.btnCritique = new JButton("Chemin critique");
-        this.btnCritique.setEnabled(false); // Désactivé par défaut
-        this.add(this.btnCritique);
-        this.btnCritique.addActionListener(this);
+		this.btnCritique = new JButton("Chemin critique");
+		this.btnCritique.setEnabled(false); // Désactivé par défaut
+		this.add(this.btnCritique);
+		this.btnCritique.addActionListener(this);
 
 
 		/* ----------------------------- */
@@ -49,14 +51,14 @@ public class PanelBtn extends JPanel implements ActionListener
 		/* ----------------------------- */
 		this.add(this.btnCritique);
 		this.add(this.btnTot);
-        this.add(this.btnTard);
+		this.add(this.btnTard);
 
 		/* ------------------------------ */
 		/* Activation des composants      */
 		/* ------------------------------ */
 		this.btnTot.addActionListener( this);
 		this.btnTard.addActionListener( this);
-        this.btnCritique.addActionListener(this);
+		this.btnCritique.addActionListener(this);
 	}
 
 	/*-------------------------------*/
@@ -83,10 +85,10 @@ public class PanelBtn extends JPanel implements ActionListener
 
 	private void majBtn() 
 	{
-		int maxNiveau = this.frame.getCtrl().getGraphe().getListTache().getLast().getNiveau();
+		int maxNiveau = this.frame.getCtrl().getGraphe().getListTache().get(this.frame.getCtrl().getGraphe().getListTache().size() - 1).getNiveau();
 
-		if (  this.btnTot.isEnabled() ) this.btnTot.setEnabled( this.cptDate <= maxNiveau );
-		if ( !this.btnTot.isEnabled() )this.btnTard.setEnabled( this.cptDate > 0 );
+		if (  this.btnTot.isEnabled() ) this.btnTot.setEnabled ( this.cptDate <= maxNiveau );
+		if ( !this.btnTot.isEnabled() ) this.btnTard.setEnabled( this.cptDate > 0 );
 
 		
 		if ( !this.btnTot.isEnabled() && !this.btnTard.isEnabled() ) 
